# eurorack_modules

./: .gitignore  .gitmodules  README.md  WIP_STATUS.md  eurorack_modules.code-workspace  platformio.ini
.claude/: settings.json
docs/: AI_MODULES_HARDWARE.md  CALIBRATION.md  DAISY_MFX.md  ESP32_OSCCLK.md  KSOLOTI_ELEMENTS.md  NANOESP32_CORTHEX.md  PICO2W_OC.md  PROTON_SIGNAL_ROUTING.md  TEENSY_CHAOS.md  TEENSY_MOVE.md  TEENSY_MOVE_EXPANDER_DRUM_TRIGGERS.md  fm_drum_netlist.md  fm_drum_rebuild_questions.md  kick_drum_breadboard_placement.md  kick_drum_netlist_from_text.md  snare_drum_netlist.md  teensy-chaos-cv-output.cir
include/daisy-mfx/: pins.h
include/esp32oscclk/: pins.h
include/pico2w_oc/: calib_static.h  pins.h
include/teensy-chaos/: config.h  pins.h
include/teensy-drums/: pins.h
include/teensy-move-v2/: calib_static.h  chord_library.h  pins.h
libs/eurorack_calib/: README.md
libs/expander_io/: README.md
o_c_t41_kicad/: check_parts.py  generate_jlcpcb.py  inspect2.py  inspect_sch.py
o_c_t41_kicad/jlcpcb_output/: analog_rev3_bom.csv  analog_rev3_cpl.csv  control_rev3_bom.csv  control_rev3_cpl.csv
patches/: ksoloti-elements-resonator-resolution.patch
scripts/: ai_module_upload.py  copy_artifacts.py  elements_build.py  nanoesp32_corthex_upload.py
src/ai-module-bringup/: README.md  main.cpp
src/daisy-mfx/: main.cpp
src/esp32oscclk/: main.cpp
src/ksoloti-elements/: adc.cc  adc.h  codec.cc  codec.h  font5x7.h  main.cc  oled.cc  oled.h
tools/llm-proxy/: .env.example  README.md  com.corthex.proxy.plist  proxy.py  pyproject.toml
(+44 files in other folders)
